2011-04-22  Yael Aharon  <yael.aharon@nokia.com>

        Reviewed by Sam Weinig.

        HTMLFormControlElement::labels should allow custom attributes.
        https://bugs.webkit.org/show_bug.cgi?id=59128

        Cache the labels list when it is created and keep using it for future
        labels calls.

        Test: fast/forms/labels-custom-property.html

        * html/HTMLFormControlElement.cpp:
        (WebCore::HTMLFormControlElement::labels):

2011-04-22  Adrienne Walker  <enne@google.com>

        Reviewed by James Robinson.

        [chromium] Remove minimum texture size for compositor tiling
        https://bugs.webkit.org/show_bug.cgi?id=59236

        This was mistakenly committed in r83915 and causes bad filtering
        on very small textures.

        Tests: compositing/images/content-image-change.html

        * platform/graphics/chromium/LayerTilerChromium.cpp:
        (WebCore::LayerTilerChromium::setTileSize):

2011-04-22  Beth Dakin  <bdakin@apple.com>

        Reviewed by Maciej Stachowiak.

        https://bugs.webkit.org/show_bug.cgi?id=59223
        REGRESSION (r82185): iframe not displayed after navigation back to cached page
        -and corresponding-
        <rdar://problem/9323763>

        Cache the scroll position in Document::setInPageCache() instead of 
        FrameView::resetScrollbarsAndClearContentsSize(), and only clear the contents size 
        for the mainFrame(). Still resetScrollbars() for other frames, which matches pre-
        r82185 code.
        * dom/Document.cpp:
        (WebCore::Document::setInPageCache):
        * page/FrameView.cpp:
        (WebCore::FrameView::resetScrollbarsAndClearContentsSize):

2011-04-22  Joseph Pecoraro  <joepeck@webkit.org>

        Reviewed by Kent Tamura.

        Don't rely on hasSpinButton to check if an input type can be stepped
        https://bugs.webkit.org/show_bug.cgi?id=59224

        Add isSteppable to know for certain if an input type can