@@ -1,0 +1,8 @@
+<html>
+<body>
+<script>
+    document.body.offsetWidth;
+    setTimeout("window.history.back();", 0);
+</script>
+</body>
+</html>
